getting info for pagination
