# src/types/types.ts
@@ -1,7 +1,0 @@
-import { ClothType } from "generated/api"
-
-export type ClothItem = {
-    baseImage: string,
-    cost: number,
-    type: ClothType
-}
